# velxio

./: .gitignore  CHANGELOG.md  Dockerfile.standalone  README.md  pytest.ini
.github/workflows/: backend-e2e-tests.yml  discord-issues.yml  discord-release-notify.yml  frontend-tests.yml
backend/: requirements.txt
backend/app/core/: config.py  hooks.py
backend/app/services/: arduino_cli.py  c_compile.py  esp32_lib_bridge.py  esp32_lib_manager.py  esp32_sd_slave.py  esp32_spi_slaves.py  esp32_worker.py  espidf_compiler.py  odoo_mail.py  picow_net_bridge.py  qemu_manager.py  rom_compile.py
backend/app/services/esp-idf-template/main/: CMakeLists.txt
backend/tests/: test_compile_request_dedup.py  test_esp32_sd_slave.py  test_espidf_options.py
docs/: BOOT_IMAGES.md
docs/wiki/: esp32-external-library-compilation.md
frontend/: package.json  vite.config.ts  vitest.config.ts
frontend/public/: components-metadata.json  manifest.webmanifest  sitemap.xml
frontend/public/.well-known/: assetlinks.json
frontend/scripts/: generate-sitemap.mjs  prerender-seo.mjs
frontend/src/: App.tsx  entry-server.tsx  main.tsx  seoRoutes.ts
frontend/src/__tests__/: AVRSimulator.test.ts  PinManager.test.ts  arduino-arduino-spi.test.ts  arduino-esp32-uart.test.ts  arduino-pico-digital.test.ts  arduino-pico-i2c.test.ts  arduino-pico-mixed-uart.test.ts  attiny85-simulation.test.ts  board-kinds-coverage.test.ts  board-protocols-audit.test.ts  board-removal-running-reconcile.test.ts  buzzer-metronome.test.ts  chipbus-buskernel.test.ts  chipbus-buslogic.test.ts  chipbus-busnets.test.ts  chipbus-galaksija-boot.test.ts  chipbus-galaksija-computer.test.ts  chipbus-galaksija-display-snoop-race.test.ts  chipbus-galaksija-display.test.ts  chipbus-galaksija-keyboard.test.ts  chipbus-galaksija-ram-display.test.ts  chipbus-galaksija-reset-race.test.ts  chipbus-netkey.test.ts  chipbus-twochip-integration.test.ts  chipbus-z80-ram-decode.test.ts  chipbus-z80-rom-boot.test.ts  circuit-simulation-service.test.ts  circuit-verifier.test.ts  component-to-spice.test.ts  components-metadata-integrity.test.ts  connect-mixed-mode-scheduler-to-store.test.ts  cyw43-sdpcm-align.test.ts  digitalgate-engine-examples.test.ts  digitalgate-kernel.test.ts  digitalgate-mixed-boundary.test.ts  digitalgate-sequential.test.ts  digitalgate-sweep.test.ts  dual-arduino-digital.test.ts  dual-arduino-hw-uart.test.ts  dual-arduino-multi-protocol.test.ts  (+43 more)
frontend/src/components/: DynamicComponent.tsx
frontend/src/data/: examples-100-days.ts  examples-circuits.ts  examples-digital.ts  examples-displays-epaper.ts  examples-esp32-mqtt.ts  examples-picow-wifi.ts  examples-retro-intel.ts  examples-storage-microsd.ts  examples.ts
frontend/src/desktop/: Esp32QemuPrompt.tsx  UpdateAvailableToast.tsx  desktop.css  index.ts  menu.ts
frontend/src/i18n/: index.ts
frontend/src/lib/: openDeviceGateway.ts  proSdCardGate.ts  serialRawExporter.ts
frontend/src/pages/: AboutPage.tsx  EditorPage.tsx  LandingPage.css  LandingPage.tsx  ProjectByIdPage.tsx  Velxio3Page.tsx
frontend/src/services/: ComponentRegistry.ts  compilation.ts  libraryService.ts  projectService.ts  romCompileService.ts
frontend/src/simulation/: AVRSimulator.ts  Esp32Bridge.ts  Esp32C3Simulator.ts  Interconnect.ts  MicroPythonLoader.ts  PinManager.ts  PinResolver.ts  PioPeripheral.ts  RP2040Simulator.ts  RiscVSimulator.ts
frontend/src/store/: useCompileLogsStore.ts  useEditorStore.ts  useElectricalStore.ts  useLibraryManifestStore.ts  useSimulatorStore.ts
frontend/src/types/: board.ts  boardOptions.ts
frontend/src/utils/: applyProjectManifest.ts  boardProtocols.ts  compilationLogger.ts  exampleToBuildNetlistInput.ts  fatImage.ts  loadExample.ts  pinPositionCalculator.ts  projectPayload.ts  sdCardFiles.ts  useSEO.ts
scripts/: component-overrides.json  visual-led-test.mjs
test/backend/unit/: test_boot_images.py  test_esp32_wifi_args.py  (+2 more)
test/pi3_protocols/: test_pi3_protocols.py
test/pico_doom_demo/: README.md  arduino_sketch.ino  compile_check.sh
test/test_epaper/: ssd168x_decoder.py  test_ssd168x_protocol.py
test/test_micropython_wifi_trace/: test.mjs
(+151 files in other folders)
